re PR tree-optimization/49018 (Inline assembly block executed outside conditional check with "-O1 -ftree-vrp")

2011-05-18  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/49018
	* gimple.c (gimple_has_side_effects): Volatile asms have side-effects.
	* tree-ssa-ifcombine.c (bb_no_side_effects_p): Use
	gimple_has_side_effects.

From-SVN: r173861